==> wugensheng-code/tinyusb/src/portable/renesas/zephyr_ra8/dcd.c <==
#include <soc.h>
#include <stdint.h>
#include <string.h>
#include <zephyr/kernel.h>
#include <zephyr/drivers/pinctrl.h>
#include <zephyr/irq.h>
#include <zephyr/drivers/clock_control/renesas_ra_cgc.h>
#include "fsp_common_api.h"
#include "r_usb_device.h"
#include "r_usb_device_api.h"
#include "zephyr/toolchain.h"
#include <zephyr/logging/log.h>
#define LOG_DECLARE
#include "device/dcd.h"
#define CONFIG_UDC_RENESAS_RA_MAX_QMESSAGES						64
#define RHPORT 0

bool dcd_init(uint8_t rhport, const tusb_rhport_init_t* rh_init) {

	ARG_UNUSED(rhport);
	ARG_UNUSED(rh_init);

	int ret;

	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;

	if (FSP_SUCCESS != R_USBD_Open(&data->udc, &data->udc_cfg)) {
		LOG_ERR("Failed to open device: %s", dev->name);
		return false;
	}

	tusb_desc_endpoint_t control_out_ep_desc;
	tusb_desc_endpoint_t control_in_ep_desc;

	control_out_ep_desc.bDescriptorType = TUSB_XFER_CONTROL;
	control_out_ep_desc.bEndpointAddress = EDPT_CTRL_OUT;
	control_out_ep_desc.bInterval = 0;
	control_out_ep_desc.bLength = sizeof(usbd_desc_endpoint_t);
	control_out_ep_desc.wMaxPacketSize = 64;
	control_out_ep_desc.bmAttributes.xfer = TUSB_XFER_CONTROL;

	if(!dcd_edpt_open(EDPT_CTRL_OUT, &control_out_ep_desc)) {
		LOG_ERR("Failed to enable control endpoint");
		return false;
	}


	control_in_ep_desc.bDescriptorType = TUSB_XFER_CONTROL;
	control_in_ep_desc.bEndpointAddress = EDPT_CTRL_IN;
	control_in_ep_desc.bInterval = 0;
	control_in_ep_desc.bLength = sizeof(usbd_desc_endpoint_t);
	control_in_ep_desc.wMaxPacketSize = 64;
	control_in_ep_desc.bmAttributes.xfer = TUSB_XFER_CONTROL;


	if(!dcd_edpt_open(EDPT_CTRL_IN, &control_in_ep_desc)) {
		LOG_ERR("Failed to enable control endpoint");
		return false;
	}

	dcd_int_enable(RHPORT);

	if (FSP_SUCCESS != R_USBD_Connect(&data->udc)) {
		return -EIO;
	}
	
	ret = k_work_submit_to_queue(&data->udc_work_q, &data->work.work);

	if (ret < 0) {
		LOG_ERR("Failed to submit work to queue: %d", ret);
		return false;
	} else {
		LOG_DBG("Enable device %p", dev);
		return true;
	}
}

void dcd_int_enable(uint8_t rhport) {
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = dev->data;

	#if DT_HAS_COMPAT_STATUS_OKAY(renesas_ra_usbhs)
	if (data->udc_cfg.hs_irq != (IRQn_Type)BSP_IRQ_DISABLED) {
		irq_enable(data->udc_cfg.hs_irq);
	}
#endif

	if (data->udc_cfg.irq != (IRQn_Type)BSP_IRQ_DISABLED) {
		irq_enable(data->udc_cfg.irq);
	}

	if (data->udc_cfg.irq_r != (IRQn_Type)BSP_IRQ_DISABLED) {
		irq_enable(data->udc_cfg.irq_r);
	}
}

void dcd_int_disable(uint8_t rhport) {
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = dev->data;

	#if DT_HAS_COMPAT_STATUS_OKAY(renesas_ra_usbhs)
	if (data->udc_cfg.hs_irq != (IRQn_Type)BSP_IRQ_DISABLED) {
		irq_disable(data->udc_cfg.hs_irq);
	}
#endif

	if (data->udc_cfg.irq != (IRQn_Type)BSP_IRQ_DISABLED) {
		irq_disable(data->udc_cfg.irq);
	}

	if (data->udc_cfg.irq_r != (IRQn_Type)BSP_IRQ_DISABLED) {
		irq_disable(data->udc_cfg.irq_r);
	}
}

void dcd_set_address(uint8_t rhport, uint8_t dev_addr) {

	ARG_UNUSED(rhport);

	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	/* The USB controller will automatically perform a response to the SET_ADRRESS request. */
	LOG_DBG("Set new address %u for %s", dev_addr, dev->name);

	return;
}

void dcd_remote_wakeup(uint8_t rhport)
{
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;

	if (FSP_SUCCESS != R_USBD_RemoteWakeup(&data->udc)) {
		LOG_ERR("Remote wakeup from %s failed", dev->name);
	} else {
		LOG_DBG("Remote wakeup from %s", dev->name);
	}

	return;
}

void dcd_connect(uint8_t rhport)
{
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;

	R_USBD_Connect(&data->udc);
}

void dcd_disconnect(uint8_t rhport)
{
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;

	R_USBD_Disconnect(&data->udc);
}

void dcd_sof_enable(uint8_t rhport, bool en)
{
	R_USB_HS0->INTENB0_b.SOFE = en ? 1: 0;
	LOG_DBG("SOF %s", en ? "enabled" : "disabled");
}

bool dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const * ep_desc)
{
    const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));

	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;
	struct udc_renesas_ra_config *config = (struct udc_renesas_ra_config *)dev->config;

    usbd_desc_endpoint_t ep;
    uint8_t ep_idx = tu_edpt_number(ep_desc->bEndpointAddress);



    if (tu_edpt_dir(ep_desc->bEndpointAddress) == TUSB_DIR_OUT) {
		if (config->out_ep[ep_idx].stat.enabled == true)
			return true;
        config->out_ep[ep_idx].ep_mps = tu_edpt_packet_size(ep_desc);
        config->out_ep[ep_idx].ep_type = tu_desc_type(ep_desc);
        config->out_ep[ep_idx].stat.enabled = true;
		k_fifo_init(&config->out_ep[ep_idx].fifo);
    } else {
		if (config->in_ep[ep_idx].stat.enabled == true)
			return true;
        config->in_ep[ep_idx].ep_mps = tu_edpt_packet_size(ep_desc);
        config->in_ep[ep_idx].ep_type = tu_desc_type(ep_desc);
        config->in_ep[ep_idx].stat.enabled = true;
		k_fifo_init(&config->in_ep[ep_idx].fifo);
    }

	if (ep_idx == 0) {
		return true;
	}

	ep.bLength = sizeof(tusb_desc_endpoint_t);
	ep.bDescriptorType = tu_desc_type(ep_desc);
	ep.bEndpointAddress = ep_desc->bEndpointAddress;
	ep.Attributes.sync = ep_desc->bmAttributes.sync;
	ep.Attributes.xfer = ep_desc->bmAttributes.xfer;
	ep.wMaxPacketSize = ep_desc->wMaxPacketSize;
	ep.bInterval = ep_desc->bInterval;

	if (FSP_SUCCESS != R_USBD_EdptOpen(&data->udc, &ep)) {
		LOG_ERR("Enable ep 0x%02x failed", ep_desc->bEndpointAddress);
		return false;
	}


	LOG_DBG("Enable ep 0x%02x", ep_desc->bEndpointAddress);

	return true;
}

bool dcd_edpt_xfer(uint8_t rhport, uint8_t ep_addr, uint8_t* buffer, uint16_t total_bytes)
{
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *dev_data = (struct udc_renesas_ra_data *)dev->data;
	int err;


	if (!buffer && total_bytes) {
	    return false;
	}

	LOG_DBG("D%sH: ep: %d data: %p len: %d", ((tu_edpt_dir(ep_addr) == TUSB_DIR_IN) ? "->" : "<-"),
		tu_edpt_number(ep_addr), buffer, total_bytes);

	err = R_USBD_XferStart(&dev_data->udc, ep_addr, (uint8_t*)buffer, total_bytes);
	if (err != FSP_SUCCESS) {
		LOG_ERR("Failed to start write on ep 0x%02x", ep_addr);
		return false;
	}

    return true;
}

void dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr)
{
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;

	LOG_DBG("Set halt ep 0x%02x", ep_addr);

	if (FSP_SUCCESS != R_USBD_EdptStall(&data->udc, ep_addr)) {
		LOG_DBG("Set halt ep 0x%02x failed", ep_addr);
	}

	return;
}

void dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr)
{
	const struct device *const dev = DEVICE_DT_GET(DT_NODELABEL(zephyr_udc0));
	struct udc_renesas_ra_data *data = (struct udc_renesas_ra_data *)dev->data;

	LOG_DBG("Clear halt ep 0x%02x", ep_addr);

	if (FSP_SUCCESS != R_USBD_EdptClearStall(&data->udc, ep_addr)) {
		LOG_DBG("Clear halt ep 0x%02x failed", ep_addr);
	}

    return;
}
