==> lab11/socitrack/software/firmware/src/external/tinyusb/dcd_apollo4.c <==
#include "dcd_apollo4.h"
#include "device/usbd.h"

void
dcd_init(uint8_t rhport)
{
    (void) rhport;

#if TUSB_ADDED_FUNCTIONS
    if (!dcd_usb_states.vddPresent ) return;
#endif

    //
    // Powerup Sequence
    // see Apollo4 Errata ERR041: Induced D+ output pulse may cause
    // unintended disconnect.
    //

    //
    // this function call doesn't set any USB registers, it configures the driver
    //
    uint32_t initStat = am_hal_usb_initialize(0, (void *) &pUSBHandle);
    if (initStat != AM_HAL_STATUS_SUCCESS) return;

    dcd_usb_states.isInited = true;
    dcd_usb_states.isPoweredUp = true;
    //
    // Register the callback functions
    //
    am_hal_usb_register_dev_evt_callback(pUSBHandle, dcd_usb_dev_evt_callback);
    am_hal_usb_register_ep0_setup_received_callback(pUSBHandle, dcd_usb_ep0_setup_callback);
    am_hal_usb_register_ep_xfer_complete_callback(pUSBHandle, dcd_usb_ep_xfer_complete_callback);

#if defined(AM_PART_APOLLO4B) || defined(AM_PART_APOLLO4P)

    //
    // Rev B power up sequence. ERR041
    //

    //
    // enable internal power rail
    //
    am_hal_usb_power_control(pUSBHandle, AM_HAL_SYSCTRL_WAKE, false);

    //
    // clear USB PHY reset in MCU control registers
    //
    am_hal_usb_enable_phy_reset_override();


#ifdef ENABLE_EXT_USB_PWR_RAILS

    //
    // Enable the USB power rails
    //
    am_bsp_external_vddusb33_switch(true);
    am_bsp_external_vddusb0p9_switch(true);
    am_util_delay_ms(50);
#endif // ENABLE_EXT_USB_PWR_RAILS


#ifdef AM_USB_CHARGER_DETECT
    //
    // Simulate an PMIC or GPIO VBUS session interrupt
    //
    dcd_usb_charger_type = dcd_usb_vbus_session(rhport, true);

#else // !AM_USB_CHARGER_DETECT

    //
    // disable BC detection voltage source
    //
    am_hal_usb_hardware_unreset();
    //
    // start HFRC2 if the USB will run at HIGH speed
    // set argument to true, as we want the clock enabled if
	// high speed is enabled
    //
    uint32_t ui32hfrc2_status = dcd_usb_setHFRC2(true);

    //
    // set USB PHY reset disable
    //
    am_hal_usb_disable_phy_reset_override();

#if BOARD_DEVICE_RHPORT_SPEED == OPT_MODE_FULL_SPEED
    am_hal_usb_dev_speed_e eUsbSpeed = AM_HAL_USB_SPEED_FULL;
#else
    am_hal_usb_dev_speed_e eUsbSpeed = AM_HAL_USB_SPEED_HIGH;
#endif

    if (ui32hfrc2_status == AM_HAL_STATUS_SUCCESS)
    {
        am_hal_usb_set_dev_speed(pUSBHandle, eUsbSpeed);
    }

    //
    // enable usb module interrupts
    //
    am_hal_usb_intr_usb_enable(pUSBHandle, USB_INTRUSB_Reset_Msk);

    //
    // this implements the soft connect
    //
    dcd_connect(rhport);
#endif // END AM_USB_CHARGER_DETECT

#elif defined(AM_PART_APOLLO4)  // defined(AM_PART_APOLLO4B) || defined(AM_PART_APOLLO4P)

    //
    // this is ERR041 REV A power up sequence
    //
    am_hal_usb_power_control(pUSBHandle, AM_HAL_SYSCTRL_WAKE, false);
#ifdef ENABLE_EXT_USB_PWR_RAILS

    //
    // Enable the USB power rails
    //
    am_bsp_external_vddusb33_switch(true);
    am_bsp_external_vddusb0p9_switch(true);
    am_util_delay_ms(50);
#endif // ENABLE_EXT_USB_PWR_RAILS
    am_hal_usb_intr_usb_enable(pUSBHandle, USB_INTRUSB_Reset_Msk);
#if BOARD_DEVICE_RHPORT_SPEED == OPT_MODE_FULL_SPEED
    am_hal_usb_set_dev_speed(pUSBHandle, AM_HAL_USB_SPEED_FULL);
#endif
    dcd_connect(rhport);
#endif // elif defined(AM_PART_APOLLO4)  // defined(AM_PART_APOLLO4B) || defined(AM_PART_APOLLO4P)

}

void
dcd_int_enable(uint8_t rhport)
{
    (void) rhport;
    NVIC_SetPriority(USB0_IRQn, AM_IRQ_PRIORITY_DEFAULT);
    NVIC_EnableIRQ(USB0_IRQn);
}

void
dcd_int_disable(uint8_t rhport)
{
    (void) rhport;
    NVIC_DisableIRQ(USB0_IRQn);
}

void
dcd_set_address(uint8_t rhport, uint8_t dev_addr)
{
    // Response with status first before changing device address
    dcd_edpt_xfer(rhport, tu_edpt_addr(0, TUSB_DIR_IN), NULL, 0);
    am_hal_usb_set_addr(pUSBHandle, dev_addr);
    am_hal_usb_set_dev_state(pUSBHandle, AM_HAL_USB_DEV_STATE_ADDRESSED);
}

void
dcd_remote_wakeup(uint8_t rhport)
{
    (void) rhport;
    am_hal_usb_start_remote_wakeup(pUSBHandle);
}

bool
dcd_edpt_open(uint8_t rhport, tusb_desc_endpoint_t const *desc_edpt)
{
    (void) rhport;

    return am_hal_usb_ep_init((void *) pUSBHandle,
                              desc_edpt->bEndpointAddress,
                              (uint8_t) (desc_edpt->bmAttributes.xfer),
                              (uint16_t) (desc_edpt->wMaxPacketSize)) == AM_HAL_STATUS_SUCCESS;
}

bool
dcd_edpt_xfer(uint8_t rhport,
              uint8_t ep_addr,
              uint8_t *buffer,
              uint16_t total_bytes)
{
    (void) rhport;

    return am_hal_usb_ep_xfer(pUSBHandle,
                              ep_addr,
                              buffer,
                              total_bytes) == AM_HAL_STATUS_SUCCESS;
}

void
dcd_edpt_stall(uint8_t rhport, uint8_t ep_addr)
{
    (void) rhport;

    am_hal_usb_ep_stall(pUSBHandle, ep_addr);
}

void
dcd_edpt_clear_stall(uint8_t rhport, uint8_t ep_addr)
{
    am_hal_usb_ep_clear_stall(pUSBHandle, ep_addr);
}

void dcd_sof_enable(uint8_t rhport, bool en)
{
    (void) rhport;

    if(en)
    {
        am_hal_usb_enable_sof_intr(pUSBHandle);
    }
    else
    {
        am_hal_usb_disable_sof_intr(pUSBHandle);
    }
}

void
dcd_connect(uint8_t rhport)
{
    (void) rhport;
    am_hal_usb_attach(pUSBHandle);
}

void
dcd_disconnect(uint8_t rhport)
{
    (void) rhport;
    am_hal_usb_detach(pUSBHandle);
}
